[gd_scene load_steps=17 format=2]

[ext_resource path="res://resources/font/Arcadepix Plus.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://resources/font/OpenSans-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://online_mode/join_level/qr-code.png" type="Texture" id=3]
[ext_resource path="res://resources/font/button.tres" type="DynamicFont" id=4]
[ext_resource path="res://online_mode/join_level/manager.gd" type="Script" id=5]
[ext_resource path="res://scenes/user_profile/buttons and panels/cat_loding.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.980392, 0.980392, 0.980392, 1 )

[sub_resource type="DynamicFont" id=4]
size = 82
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 46
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 0.392157 )

[sub_resource type="DynamicFont" id=7]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 38
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=10]
resource_name = "loading"
length = 3.9
tracks/0/type = "value"
tracks/0/path = NodePath("loading_scrreen/AnimationPlayer/loading:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38 ]
}

[node name="join_level" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
textfield = NodePath("HBoxContainer/code")
error_popup = NodePath("CanvasLayer/dialog_box")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -450.0
margin_top = -50.0
margin_right = 450.0
margin_bottom = 50.0
custom_constants/separation = 50

[node name="code" type="LineEdit" parent="HBoxContainer"]
margin_right = 750.0
margin_bottom = 100.0
rect_min_size = Vector2( 750, 100 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
align = 1
placeholder_text = "5FZ135ZB"

[node name="scan_qr" type="Button" parent="HBoxContainer"]
margin_left = 800.0
margin_right = 900.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
custom_styles/normal = SubResource( 3 )
icon = ExtResource( 3 )
icon_align = 1
expand_icon = true

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -417.0
margin_top = -240.0
margin_right = 417.0
margin_bottom = -164.0
custom_fonts/font = SubResource( 4 )
text = "Enter/Scan a Level Code"

[node name="join" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = 140.0
margin_right = 100.0
margin_bottom = 240.0
rect_min_size = Vector2( 200, 100 )
custom_fonts/font = SubResource( 5 )
text = "JOIN"

[node name="back" type="Button" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 120.0
margin_bottom = 120.0
rect_min_size = Vector2( 100, 100 )
custom_fonts/font = ExtResource( 4 )
text = "<"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="dialog_box" type="Control" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="CanvasLayer/dialog_box"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 6 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/dialog_box"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -125.0
margin_right = 400.0
margin_bottom = 125.0
rect_min_size = Vector2( 800, 350 )
color = Color( 0.984314, 0.780392, 0.235294, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/dialog_box/ColorRect"]
anchor_right = 1.0
margin_bottom = 204.0
rect_min_size = Vector2( 800, 0 )

[node name="info" type="Label" parent="CanvasLayer/dialog_box/ColorRect/VBoxContainer"]
margin_right = 800.0
margin_bottom = 100.0
rect_min_size = Vector2( 800, 100 )
custom_fonts/font = SubResource( 7 )
text = "Error"
align = 1
valign = 1
autowrap = true

[node name="message" type="Label" parent="CanvasLayer/dialog_box/ColorRect/VBoxContainer"]
margin_top = 104.0
margin_right = 800.0
margin_bottom = 204.0
rect_min_size = Vector2( 800, 100 )
custom_fonts/font = SubResource( 8 )
text = "Please Enter a Valid Level Code"
align = 1
valign = 1
autowrap = true

[node name="continue" type="Button" parent="CanvasLayer/dialog_box/ColorRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -100.0
margin_right = 100.0
margin_bottom = -25.0
rect_min_size = Vector2( 200, 75 )
custom_fonts/font = SubResource( 9 )
text = "Continue"

[node name="loading_scrreen" type="CanvasLayer" parent="."]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="loading_scrreen"]
root_node = NodePath("../..")
anims/loading = SubResource( 10 )

[node name="ColorRect" type="ColorRect" parent="loading_scrreen/AnimationPlayer"]
modulate = Color( 0, 0, 0, 0.490196 )
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 47.8912, 26.8649 )

[node name="loading" type="Sprite" parent="loading_scrreen/AnimationPlayer"]
position = Vector2( 958, 549 )
scale = Vector2( 1.51297, 1.29287 )
texture = ExtResource( 6 )
hframes = 40

[connection signal="pressed" from="join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="CanvasLayer/dialog_box/ColorRect/continue" to="." method="_on_continue_pressed"]
[connection signal="animation_finished" from="loading_scrreen/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
